--- a/experiments/coco/hrnet/w48_256x192_adam_lr1e-3.yaml
+++ b/experiments/coco/hrnet/w48_256x192_adam_lr1e-3.yaml
@@ -4,10 +4,10 @@ CUDNN:
   DETERMINISTIC: false
   ENABLED: true
 DATA_DIR: ''
-GPUS: (0,1,2,3)
+GPUS: (0,)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
-WORKERS: 24
+WORKERS: 8
 PRINT_FREQ: 100
 
 DATASET:
@@ -25,15 +25,15 @@ DATASET:
 MODEL:
   INIT_WEIGHTS: true
   NAME: pose_hrnet
-  NUM_JOINTS: 17
-  PRETRAINED: 'models/pytorch/imagenet/hrnet_w48-8ef0771d.pth'
+  NUM_JOINTS: 10
+  PRETRAINED: none #'models/pytorch/imagenet/hrnet_w48-8ef0771d.pth'
   TARGET_TYPE: gaussian
   IMAGE_SIZE:
-  - 192
-  - 256
+  - 384
+  - 384
   HEATMAP_SIZE:
-  - 48
-  - 64
+  - 96
+  - 96
   SIGMA: 2
   EXTRA:
     PRETRAINED_LAYERS:
@@ -96,9 +96,10 @@ TRAIN:
   BEGIN_EPOCH: 0
   END_EPOCH: 210
   OPTIMIZER: adam
-  LR: 0.001
+  LR: 0.00001
   LR_FACTOR: 0.1
   LR_STEP:
+  - 40
   - 170
   - 200
   WD: 0.0001
