--- a/experiments/coco/lpn/lpn101_384x384_gc.yaml
+++ b/experiments/coco/lpn/lpn101_384x384_gc.yaml
@@ -7,7 +7,7 @@ DATA_DIR: ''
 GPUS: (0,)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
-WORKERS: 8 #10
+WORKERS: 4 #10
 PRINT_FREQ: 100
 
 DATASET:
@@ -32,11 +32,11 @@ MODEL:
   PRETRAINED: ''
   NUM_INPUT_IMAGES: 1
   IMAGE_SIZE:
-  - 576
-  - 576
+  - 384
+  - 384
   HEATMAP_SIZE:
-  - 144
-  - 144
+  - 96
+  - 96
   SIGMA: 2
   NUM_JOINTS: 10
   JOINTS_WEIGHT: [5, 5, 1, 0.3, 1, 1, 1, 1, 1, 1]  # None
@@ -52,14 +52,14 @@ MODEL:
     NUM_DECONV_KERNELS:
     - 4
     - 4
-    NUM_LAYERS: 50
+    NUM_LAYERS: 101
 LOSS:
   USE_TARGET_WEIGHT: true
 TRAIN:
   BATCH_SIZE_PER_GPU: 32
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 200
+  END_EPOCH: 50
   OPTIMIZER: 'adam'
 #  LR: 0.00001
   LR: 0.0002
@@ -75,12 +75,12 @@ TRAIN:
   MOMENTUM: 0.9
   NESTEROV: false
 TEST:
-  BATCH_SIZE_PER_GPU: 64 #32
+  BATCH_SIZE_PER_GPU: 32
   COCO_BBOX_FILE: '/data/coco/person_detection_results/COCO_val2017_detections_AP_H_56_person.json'
   BBOX_THRE: 1.0
   IMAGE_THRE: 0.0
   IN_VIS_THRE: 0.2
-  MODEL_FILE: 'models/pytorch/pose_coco/lpn_50_256x192.pth'
+  MODEL_FILE: 'models/pytorch/pose_coco/lpn_101_256x192.pth'
   NMS_THRE: 1.0
   OKS_THRE: 0.9
   FLIP_TEST: true
