--- a/experiments/coco/lpn/lpn50_576x576_gc.yaml
+++ b/experiments/coco/lpn/lpn50_576x576_gc.yaml
@@ -7,7 +7,7 @@ DATA_DIR: ''
 GPUS: (0,)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
-WORKERS: 10
+WORKERS: 4 #10
 PRINT_FREQ: 100
 
 DATASET:
@@ -19,17 +19,27 @@ DATASET:
   FLIP: true
   ROT_FACTOR: 40
   SCALE_FACTOR: 0.3
+  MAX_ANGLE: 10
+  SCALE_LIMITS: (0.7, 2.0)
+  SQUASH_SHIFT: 10
+  CROP_RATIO: 1.7
+  VAL_CROP_RATIO: 1.5
+  CUTOUT_PROB: 0.9
+  CUTOUT_MIN: 20
+  CUTOUT_MAX: 100
 MODEL:
   NAME: 'lpn'
-  PRETRAINED: ''
+  PRETRAINED: '/data/projects/swat/users/eladc/ordit_pose_est/pose_estimation_2d/single_person/deep-high-resolution-net.pytorch-master/lib/models/pytorch/pose_coco/lpn_50_256x192.pth'
+  NUM_INPUT_IMAGES: 3
   IMAGE_SIZE:
-  - 192
-  - 256
+  - 576
+  - 576
   HEATMAP_SIZE:
-  - 48
-  - 64
+  - 144
+  - 144
   SIGMA: 2
-  NUM_JOINTS: 17
+  NUM_JOINTS: 10
+  JOINTS_WEIGHT: [5, 5, 1, 0.3, 1, 1, 1, 1, 1, 1]  # None
   TARGET_TYPE: 'gaussian'
   EXTRA:
     ATTENTION: 'GC'
@@ -42,32 +52,35 @@ MODEL:
     NUM_DECONV_KERNELS:
     - 4
     - 4
-    NUM_LAYERS: 101
+    NUM_LAYERS: 50
 LOSS:
   USE_TARGET_WEIGHT: true
 TRAIN:
   BATCH_SIZE_PER_GPU: 32
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 150
+  END_EPOCH: 200
   OPTIMIZER: 'adam'
-  LR: 0.001
+#  LR: 0.00001
+  LR: 0.00002
   LR_FACTOR: 0.1
   LR_STEP:
-  - 90
-  - 120
-  WD: 0.0001
+  - 100
+  - 150
+  - 195
+#  WD: 0.0000001
+  WD: 0.000001
   GAMMA1: 0.99
   GAMMA2: 0.0
   MOMENTUM: 0.9
   NESTEROV: false
 TEST:
-  BATCH_SIZE_PER_GPU: 32
+  BATCH_SIZE_PER_GPU: 64 #32
   COCO_BBOX_FILE: '/data/coco/person_detection_results/COCO_val2017_detections_AP_H_56_person.json'
   BBOX_THRE: 1.0
   IMAGE_THRE: 0.0
   IN_VIS_THRE: 0.2
-  MODEL_FILE: 'models/pytorch/pose_coco/lpn_101_256x192.pth'
+  MODEL_FILE: 'models/pytorch/pose_coco/lpn_50_256x192.pth'
   NMS_THRE: 1.0
   OKS_THRE: 0.9
   FLIP_TEST: true
