--- a/experiments/coco/lpn/lpn50_384x384_gc_full_res.yaml
+++ b/experiments/coco/lpn/lpn50_384x384_gc_full_res.yaml
@@ -7,7 +7,7 @@ DATA_DIR: ''
 GPUS: (0,)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
-WORKERS: 4
+WORKERS: 4 #10
 PRINT_FREQ: 100
 
 DATASET:
@@ -21,13 +21,13 @@ DATASET:
   ROT_FACTOR: 40
   SCALE_FACTOR: 0.3
   MAX_ANGLE: 10
-  SCALE_LIMITS: (0.8, 1.3)
-  SQUASH_SHIFT: 0
-  CROP_RATIO: 1.5
-  VAL_CROP_RATIO: 1.7
-  CUTOUT_PROB: 0.0
-  CUTOUT_MIN: 10
-  CUTOUT_MAX: 10
+  SCALE_LIMITS: (0.7, 2.0)
+  SQUASH_SHIFT: 10
+  CROP_RATIO: 1.7
+  VAL_CROP_RATIO: 1.5
+  CUTOUT_PROB: 0.9
+  CUTOUT_MIN: 20
+  CUTOUT_MAX: 100
 MODEL:
   NAME: 'lpn'
   PRETRAINED: '' #'/data/projects/swat/users/eladc/ordit_pose_est/pose_estimation_2d/single_person/deep-high-resolution-net.pytorch-master/lib/models/pytorch/pose_coco/lpn_50_256x192.pth'
@@ -37,9 +37,9 @@ MODEL:
   - 384
   - 384
   HEATMAP_SIZE:
-  - 96
-  - 96
-  SIGMA: 2
+  - 384
+  - 384
+  SIGMA: 3
   NUM_JOINTS: 10
   JOINTS_WEIGHT: [5, 5, 1, 0.3, 1, 1, 1, 1, 1, 1]  # None
   TARGET_TYPE: 'gaussian'
@@ -47,18 +47,22 @@ MODEL:
     ATTENTION: 'GC'
     FINAL_CONV_KERNEL: 1
     DECONV_WITH_BIAS: false
-    NUM_DECONV_LAYERS: 2
+    NUM_DECONV_LAYERS: 4
     NUM_DECONV_FILTERS:
     - 256
     - 256
+    - 64
+    - 32
     NUM_DECONV_KERNELS:
+    - 4
+    - 4
     - 4
     - 4
     NUM_LAYERS: 50
 LOSS:
   USE_TARGET_WEIGHT: true
 TRAIN:
-  BATCH_SIZE_PER_GPU: 32
+  BATCH_SIZE_PER_GPU: 16
   SHUFFLE: true
   BEGIN_EPOCH: 0
   END_EPOCH: 200
