support new mode of multi-inputs and more...

--- a/experiments/coco/lpn/lpn50_384x384_gc_full_res.yaml
+++ b/experiments/coco/lpn/lpn50_384x384_gc_full_res.yaml
@@ -7,7 +7,7 @@ DATA_DIR: ''
 GPUS: (0,)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
-WORKERS: 4 #10
+WORKERS: 4
 PRINT_FREQ: 100
 
 DATASET:
@@ -21,10 +21,10 @@ DATASET:
   ROT_FACTOR: 40
   SCALE_FACTOR: 0.3
   MAX_ANGLE: 10
-  SCALE_LIMITS: (0.7, 2.0)
+  SCALE_LIMITS: (0.9, 2.0)
   SQUASH_SHIFT: 10
-  CROP_RATIO: 1.7
-  VAL_CROP_RATIO: 1.5
+  CROP_RATIO: 1.5
+  VAL_CROP_RATIO: 1.7
   CUTOUT_PROB: 0.9
   CUTOUT_MIN: 20
   CUTOUT_MAX: 100
@@ -32,6 +32,7 @@ MODEL:
   NAME: 'lpn'
   PRETRAINED: '' #'/data/projects/swat/users/eladc/ordit_pose_est/pose_estimation_2d/single_person/deep-high-resolution-net.pytorch-master/lib/models/pytorch/pose_coco/lpn_50_256x192.pth'
   NUM_INPUT_IMAGES: 1
+  NEW_MULTI_INPUT_MODE: true
   USE_PREV_HM_INPUT: false
   IMAGE_SIZE:
   - 384
@@ -39,9 +40,9 @@ MODEL:
   HEATMAP_SIZE:
   - 384
   - 384
-  SIGMA: 3
+  SIGMA: 2
   NUM_JOINTS: 10
-  JOINTS_WEIGHT: [5, 5, 1, 0.3, 1, 1, 1, 1, 1, 1]  # None
+  JOINTS_WEIGHT: [3, 3, 1, 0.3, 1, 1, 1, 1, 1, 1]  # None
   TARGET_TYPE: 'gaussian'
   EXTRA:
     ATTENTION: 'GC'
@@ -65,7 +66,7 @@ TRAIN:
   BATCH_SIZE_PER_GPU: 16
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 200
+  END_EPOCH: 30
   OPTIMIZER: 'adam'
 #  LR: 0.00001
   LR: 0.0002
