--- a/experiments/coco/hrnet/w48_384x384_multi_inputs.yaml
+++ b/experiments/coco/hrnet/w48_384x384_multi_inputs.yaml
@@ -22,21 +22,21 @@ DATASET:
   SCALE_FACTOR: 0.35
   TEST_SET: 'val2017'
   TRAIN_SET: 'train2017'
-  MAX_ANGLE: 40
+  MAX_ANGLE: 30
   SCALE_LIMITS: (0.7, 2.0)
   SQUASH_SHIFT: 40
   CROP_RATIO: 1.5
-  VAL_CROP_RATIO: 2.0
+  VAL_CROP_RATIO: 1.7
   CUTOUT_PROB: 0.9
   CUTOUT_MIN: 20
-  CUTOUT_MAX: 100
+  CUTOUT_MAX: 120
 MODEL:
-  INIT_WEIGHTS: false
+  INIT_WEIGHTS: true
   NAME: pose_hrnet
   NUM_JOINTS: 10
-  NUM_INPUT_IMAGES: 1
-  NEW_MULTI_INPUT_MODE: true
-  PRETRAINED: /data/projects/swat/users/eladc/ordit_pose_est/pose_estimation_2d/single_person/deep-high-resolution-net.pytorch-master/lib/models/pytorch/imagenet/hrnet_w48-8ef0771d.pth
+  NUM_INPUT_IMAGES: 5
+  FINE_TUNE: true
+  PRETRAINED: /data/projects/swat/results/eladc/fish_landmarks/20220616_000229__hrnet_384/state_dict.pth
   TARGET_TYPE: gaussian
   IMAGE_SIZE:
   - 384
@@ -46,7 +46,7 @@ MODEL:
   - 96
   RESIZE_OUTPUT: false
   SIGMA: 2
-  JOINTS_WEIGHT: [3, 3, 1, 0.3, 1, 1, 1, 1, 1, 1]  # None
+  JOINTS_WEIGHT: [5, 5, 1, 0.3, 1, 1, 1, 1, 1, 1]  # None
   EXTRA:
     PRETRAINED_LAYERS:
     - 'conv1'
@@ -103,7 +103,7 @@ MODEL:
 LOSS:
   USE_TARGET_WEIGHT: true
 TRAIN:
-  BATCH_SIZE_PER_GPU: 16
+  BATCH_SIZE_PER_GPU: 4
   SHUFFLE: true
   BEGIN_EPOCH: 0
   END_EPOCH: 300
