--- a/experiments/coco/lpn/lpn50_384x384_gc.yaml
+++ b/experiments/coco/lpn/lpn50_384x384_gc.yaml
@@ -13,39 +13,40 @@ PRINT_FREQ: 100
 DATASET:
   COLOR_RGB: false
   DATASET: 'coco'
-  ROOT: '/local_datasets/dataset_2d_new'
+  ROOT: '/data/projects/swat/users/eladc/project/dataset_2d_new'
   TEST_SET: 'val2017'
   TRAIN_SET: 'train2017'
   FLIP: true
 #  FLIP_INDS: (0, 1, 2, 3, 4, 5, 7, 6, 9, 8, 10, 11, 12, 13, 14, 15, 17, 16, 19, 18)
   ROT_FACTOR: 40
   SCALE_FACTOR: 0.3
-  MAX_ANGLE: 10
-  SCALE_LIMITS: (0.7, 1.2)
-  SQUASH_SHIFT: 10
+  MAX_ANGLE: 60
+  SCALE_LIMITS: (0.5, 2.3)
+  SQUASH_SHIFT: 70
   CROP_RATIO: 1.5
   VAL_CROP_RATIO: 2.0
-  CUTOUT_PROB: 0.0
-  CUTOUT_MIN: 20
-  CUTOUT_MAX: 100
+  CUTOUT_PROB: 0.7
+  CUTOUT_MIN: 60
+  CUTOUT_MAX: 140
 MODEL:
   NAME: 'lpn'
   PRETRAINED: '' #'/data/projects/swat/users/eladc/ordit_pose_est/pose_estimation_2d/single_person/deep-high-resolution-net.pytorch-master/lib/models/pytorch/pose_coco/lpn_50_256x192.pth'
   NUM_INPUT_IMAGES: 1
   USE_PREV_HM_INPUT: false
+#  OUTPUT_ACTIVATION: 'sigmoid'
   IMAGE_SIZE:
   - 384
   - 384
   HEATMAP_SIZE:
   - 96
   - 96
-  SIGMA: 2
+  SIGMA: 3
   NUM_JOINTS: 10
   JOINTS_WEIGHT: [3, 3, 1, 0.3, 1, 1, 1, 1, 1, 1]  # None
   TARGET_TYPE: 'gaussian'
   EXTRA:
-    ATTENTION: 'GC'
-    FINAL_CONV_KERNEL: 1
+    ATTENTION: 'SE'
+    FINAL_CONV_KERNEL: 5
     DECONV_WITH_BIAS: false
     NUM_DECONV_LAYERS: 2
     NUM_DECONV_FILTERS:
@@ -61,14 +62,14 @@ TRAIN:
   BATCH_SIZE_PER_GPU: 32
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 220
+  END_EPOCH: 300
   OPTIMIZER: 'adam'
-  LR: 0.00001
+  LR: 0.0001
   LR_FACTOR: 0.1
   LR_STEP:
   - 100
-  - 150
-  - 195
+  - 170
+  - 240
 #  WD: 0.0000001
   WD: 0.00001
   GAMMA1: 0.99
