--- a/experiments/coco/hrnet/w48_384x384_prev_target.yaml
+++ b/experiments/coco/hrnet/w48_384x384_prev_target.yaml
@@ -37,7 +37,7 @@ MODEL:
   NUM_JOINTS: 10
   NUM_INPUT_IMAGES: 3
   USE_PREV_HM_INPUT: true
-  PRETRAINED: /data/projects/swat/users/eladc/ordit_pose_est/pose_estimation_2d/single_person/deep-high-resolution-net.pytorch-master/lib/models/pytorch/imagenet/hrnet_w48-8ef0771d.pth
+  PRETRAINED: ""
   TARGET_TYPE: gaussian
   IMAGE_SIZE:
   - 384
