--- a/experiments/coco/lpn/lpn50_384x384_gc_prev_target.yaml
+++ b/experiments/coco/lpn/lpn50_384x384_gc_prev_target.yaml
@@ -30,7 +30,7 @@ DATASET:
   CUTOUT_MAX: 100
 MODEL:
   NAME: 'lpn'
-  PRETRAINED: '' #'/data/projects/swat/users/eladc/ordit_pose_est/pose_estimation_2d/single_person/deep-high-resolution-net.pytorch-master/lib/models/pytorch/pose_coco/lpn_50_256x192.pth'
+  PRETRAINED: ''
   NUM_INPUT_IMAGES: 3
   USE_PREV_HM_INPUT: true
   IMAGE_SIZE:
