--- a/experiments/coco/lpn/lpn50_384x384_gc_full_res.yaml
+++ b/experiments/coco/lpn/lpn50_384x384_gc_full_res.yaml
@@ -13,7 +13,7 @@ PRINT_FREQ: 100
 DATASET:
   COLOR_RGB: false
   DATASET: 'coco'
-  ROOT: '/data/projects/swat/users/eladc/project/dataset_2d_new'
+  ROOT: '/project/dataset_2d_new'
   TEST_SET: 'val2017'
   TRAIN_SET: 'train2017'
   FLIP: true
@@ -30,7 +30,7 @@ DATASET:
   CUTOUT_MAX: 140
 MODEL:
   NAME: 'lpn'
-  PRETRAINED: '' #'/data/projects/swat/users/eladc/ordit_pose_est/pose_estimation_2d/single_person/deep-high-resolution-net.pytorch-master/lib/models/pytorch/pose_coco/lpn_50_256x192.pth'
+  PRETRAINED: ''
   NUM_INPUT_IMAGES: 1
   NEW_MULTI_INPUT_MODE: true
   USE_PREV_HM_INPUT: false
